methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:4: error: object java.awt.Color is not a value
       if(isFacingTrail(Color)){
                        ^